# seo-stack

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  NOTICE  PLAN.md  PRIVACY.md  README.md  alembic.ini  pyproject.toml
.codex/: config.toml
.codex/agents/: sdlc-architecture.toml  sdlc-codebase-explorer.toml  sdlc-delivery-reviewer.toml  sdlc-delivery.toml  sdlc-planning.toml  sdlc-requirements-flow-definer.toml  sdlc-test-designer.toml
.github/workflows/: ci.yml
.serena/: project.yml
Operations Console Design System/: DesignSystemShowcase.html  README.md  SKILL.md
Operations Console Design System/docs/: ui-component-inventory.md  ui-design-system.md
Operations Console Design System/preview/: colors-accent.html  colors-semantic.html  colors-status.html  components-buttons.html  components-callouts.html  components-dialog.html  components-form.html  components-metrics.html  components-status.html  components-table.html  components-timeline.html  spacing-radii.html  type-scale.html
Operations Console Design System/ui/: tailwind.config.js
content_stack/: __init__.py  __main__.py  auth.py  cli.py  config.py  install.py  logging.py  server.py
content_stack/actions/: AGENTS.md  __init__.py  apollo.py  connectors.py  dataforseo.py  firecrawl.py  google_ads.py  http.py  mock_provider.py  openai_images.py  repository.py  telegram_bot.py  vendor_connectors.py
content_stack/api/: __init__.py  adversarial_review.py  articles.py  auth.py  auth_providers.py  authors.py  clusters.py  context.py  deps.py  envelopes.py  errors.py  filtering.py  gsc.py  health.py  interlinks.py  meta.py  pagination.py  plugins.py  procedures.py  projects.py  resources.py  runs.py  telegram_ingress.py  topics.py
content_stack/artifacts/: __init__.py  redaction.py
content_stack/auth_providers/: __init__.py  repository.py
content_stack/context/: __init__.py  repository.py
content_stack/crypto/: __init__.py  aes_gcm.py  kdf.py  seed.py
content_stack/db/: __init__.py  connection.py  migrate.py  models.py  seed.py
content_stack/integrations/: AGENTS.md  __init__.py  _base.py  _rate_limit.py  ahrefs.py  codex_plugin_cc.py  dataforseo.py  firecrawl.py  ghost.py  google_paa.py  gsc.py  jina_reader.py  openai_images.py  reddit.py  sitemap.py  wordpress.py
content_stack/jobs/: __init__.py  cron_procedures.py  drift_rollup.py  gsc_pull.py  oauth_refresh.py  runs_reaper.py  scheduler.py
content_stack/mcp/: __init__.py  bridge.py  context.py  contract.py  errors.py  permissions.py  server.py  streaming.py
content_stack/operations/: actions.py  agent_requests.py  registry.py  run_plans.py
content_stack/plugins/: __init__.py  manifest.py
content_stack/procedures/: __init__.py  llm.py  parser.py  programmatic.py  runner.py
content_stack/repositories/: __init__.py  agent_requests.py  articles.py  authors.py  base.py  clusters.py  eeat.py  gsc.py  interlinks.py  plugins.py  projects.py  resources.py  run_plans.py  runs.py  workspaces.py
content_stack/ui_dist/: index.html
content_stack/workflows/: __init__.py  run_plan_grants.py  run_plan_schema.py  template_loader.py  template_schema.py
docs/: README.md  action-executor.md  agent-experience-audit.md  agent-operating-model.md  agent-presets.md  api-keys.md  architecture.md  attribution.md  auth-providers.md  extending.md  integration-audit.md  integration-testing.md  operations.md  plan-audit.md  plugins.md  procedures-guide.md  project-memory.md  release-signoff.md  resources-and-artifacts.md  run-plans.md  security.md  setup.md  stackos-current-setup-gap-analysis.md  stackos-deliverable-task-plan.md  stackos-pivot-design-and-delivery-plan.md  task-tracker.md  ui-component-inventory.md  ui-design-system.md  upgrade.md  upstream-stripping-map.md  workflow-templates.md
docs/_audit-raw/: adversarial.md  plan.md
docs/integration-contracts/: AGENTS.md  README.md  communications.md  connector-quality.md  current-connectors.md  gtm-crm.md  media-buying.md  media-generation-runbook.md  media-generation.md  trackbooth.md
plugins/: AGENTS.md
plugins/communications/: AGENTS.md  README.md  plugin.yaml
plugins/content-stack/: .mcp.json  README.md
plugins/engineering/: plugin.yaml
plugins/gtm/: plugin.yaml
plugins/marketing/: plugin.yaml
plugins/media-buying/: plugin.yaml
plugins/publishing/: plugin.yaml
plugins/seo/: AGENTS.md  README.md  plugin.yaml
plugins/stackos/: README.md
procedures/01-bootstrap-project/: PROCEDURE.md
procedures/02-one-site-shortcut/: PROCEDURE.md
procedures/03-keyword-to-topic-queue/: PROCEDURE.md
procedures/04-topic-to-published/: PROCEDURE.md
procedures/05-bulk-content-launch/: PROCEDURE.md
procedures/06-weekly-gsc-review/: PROCEDURE.md
procedures/07-monthly-humanize-pass/: PROCEDURE.md
procedures/08-add-new-site/: PROCEDURE.md
procedures/_template/: PROCEDURE.md
scripts/: doctor.sh  gen-types.sh  install-claude.sh  install-codex.sh  install-launchd.sh  install-plugins.sh  install-procedures-claude.sh  install-procedures-codex.sh  register-mcp-claude.sh  register-mcp-codex.sh  write-openapi.py
skills/references/: seo-quality-baseline.md  skill-operating-contract.md
stackos/: action_availability.py  agent_responses.py  auth.py  cli.py  generated_inventory.py  install.py
stackos/actions/: __init__.py  alibaba_wan.py  byteplus_seedream.py  google_gemini_image.py  ideogram_images.py  manifest.py  media_artifacts.py  openai_images.py  serper.py  slack_bot.py  telegram_bot.py  trackbooth.py
stackos/agents/: __init__.py  loader.py  schema.py
stackos/api/: __init__.py  projects.py  slack_ingress.py  telegram_ingress.py
tests/: conftest.py
ui/: env.d.ts  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
(+780 files in other folders)
