[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "content-stack"
version = "0.0.1"
description = "Globally-installed Python daemon (FastAPI + SQLite/WAL + MCP Streamable HTTP) plus Vue UI giving any LLM client a stateful CRUD seam over multi-project SEO content pipelines."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "content-stack contributors" }]
keywords = ["mcp", "fastapi", "sqlite", "seo", "content", "daemon"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlmodel>=0.0.22",
    "alembic>=1.14",
    "mcp>=1.0",
    "httpx>=0.27",
    "cryptography>=43",
    "apscheduler>=3.10",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "typer>=0.13",
    "python-dotenv>=1.0",
]

[project.scripts]
content-stack = "content_stack.cli:app"

[project.urls]
Homepage = "https://github.com/flowmonkey-io/content-stack"
Repository = "https://github.com/flowmonkey-io/content-stack"

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "mypy>=1.13",
    "freezegun>=1.5",
]

[tool.hatch.build.targets.wheel]
packages = ["content_stack"]

[tool.hatch.build.targets.wheel.force-include]
"content_stack/ui_dist" = "content_stack/ui_dist"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
    "content_stack/db/migrations/versions",
    "content_stack/ui_dist",
    ".upstream",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
no_implicit_optional = true
ignore_missing_imports = true
exclude = [
    "content_stack/db/migrations/",
    "content_stack/ui_dist/",
    "tests/",
    "build/",
    "dist/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-ra", "--strict-markers"]
